# apollo-api

./: .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml  test_all_models.py  test_email_task_discovery.py  test_jan.py
.github/workflows/: ci.yml  publish.yml
src/apollo/: __init__.py  client.py  models.py  utils.py
src/qodev_apollo_api/: __init__.py  client.py  exceptions.py  models.py  utils.py
tests/: test_client.py  test_exceptions.py  test_models.py  test_utils.py
tests/integration/: validate_all_models.py  validate_email_task_flow.py
